<resources>
    <string name="app_name">Mario Kart 8 Utility App</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">How many players?</string>
    <string name="num_players_1">1 Player</string>
    <string name="num_players_2">2 Players</string>
    <string name="num_players_3">3 Players</string>
    <string name="num_players_4">4 Players</string>
    <string name="title_activity_first_menu" translatable="false">FirstMenuActivity</string>
    <string name="title_activity_random_kart">Random Kart Generator</string>
    <string name="mode_random">Random Kart Generator</string>
    <string name="mode_builder">Kart Builder</string>
    <string name="mode_recommend">Recommend Karts</string>
    <string name="title_activity_random_selected">Generated Karts</string>

    <string name="table_body">Body: </string>
    <string name="table_wheels">Wheels: </string>
    <string name="table_glider">Glider: </string>

    <string name="speed_abbreviated">Spd</string>
    <string name="acceleration_abbreviated">Acc</string>
    <string name="weight_abbreviated">Wei</string>
    <string name="handling_abbreviated">Hnd</string>
    <string name="grip_abbreviated">Grp</string>

    <string name="speed">Speed</string>
    <string name="acceleration">Acceleration</string>
    <string name="weight">Weight</string>
    <string name="handling">Handling</string>
    <string name="grip">Grip</string>
    <string name="title_activity_kart_builder" translatable="false">KartBuilderActivity</string>
</resources>
