<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RandomKartActivity"
    tools:showIn="@layout/activity_random">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message"
        android:textSize="35sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <Button
            style="@style/main_menu_button"
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_players_1"
            android:onClick="numberChosen"
            />

        <Button
            style="@style/main_menu_button"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_players_2"
            android:onClick="numberChosen"/>

        <Button
            style="@style/main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_players_3"
            android:onClick="numberChosen"/>

        <Button
            style="@style/main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_players_4"
            android:onClick="numberChosen"/>

    </LinearLayout>




</RelativeLayout>
