<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:textSize="25sp"
        android:textColor="@color/black"

        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/table_body"
                android:gravity="start"
                />

            <TextView
                android:id="@+id/body_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/table_wheels"
                android:gravity="start"
                />

            <TextView
                android:id="@+id/wheels_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:text="@string/table_glider"
                android:textColor="@color/black"
                android:gravity="start"
                />

            <TextView
                android:id="@+id/glider_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center"/>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="*"
        android:background="@drawable/table_border">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/speed_head"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_top_row_style"
                android:text="@string/speed_abbreviated"/>
            <TextView
                android:id="@+id/acceleration_head"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_top_row_style"
                android:text="@string/acceleration_abbreviated"/>
            <TextView
                android:id="@+id/weight_head"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_top_row_style"
                android:text="@string/weight_abbreviated"/>
            <TextView
                android:id="@+id/handling_head"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_top_row_style"
                android:text="@string/handling_abbreviated"/>
            <TextView
                android:id="@+id/grip_head"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_top_row_style"
                android:text="@string/grip_abbreviated"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/speed"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_bottom_row_style"/>
            <TextView
                android:id="@+id/acceleration"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_bottom_row_style"
                />
            <TextView
                android:id="@+id/weight"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_bottom_row_style"
                />
            <TextView
                android:id="@+id/handling"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_bottom_row_style"
                />
            <TextView
                android:id="@+id/traction"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/random_kart_bottom_row_style"/>
        </TableRow>
    </TableLayout>



</LinearLayout>